--- a/frontend/assets/scss/elements/input.element.scss
+++ b/frontend/assets/scss/elements/input.element.scss
@@ -7,7 +7,7 @@ textarea {
   box-sizing: border-box;
   max-width: 100%;
   box-sizing: border-box;
-  font-family: $bodyFont;
+  font-family: inherit;
   background-color: transparent;
   &:focus {
     outline: none;
